# HiveManager

./: .gitignore  CMakeLists.txt
ESP8266/HivesManager/: .cproject  .gitignore  .project  HivesManager.ino  HttpWebRequest.cpp  HttpWebRequest.h  UrlEncode.h
PHP/: index.php
PHP/Stupar/: .htaccess  add.php  api.php  footer.php  header.php  home.php  index.php  test.php  view-hive.php  view.php
PHP/Stupar/appl/: _appl_routes.php  config.php
PHP/Stupar/appl/include/: SensorDataReceiver.php
PHP/Stupar/appl/include/database/: Database.clusters.php  Database.clusters_data.php  Database.clusters_sensors.php  Database.hive_clusters.php  Database.hives.php  Database.hives_data.php  Database.hives_sensors.php
PHP/Stupar/appl/include/views/: chart-env.php  chart-hive.php  chart-timescale-selector.php
PHP/Stupar/config/: db_cfg.sample.php  gloabl_cfg.php
PHP/Stupar/core/: _core_routes.php  config.php
PHP/Stupar/core/include/: Router.php
PHP/Stupar/core/include/classes/: Benchmark.php  BotProtection.php  Forms.php  GenericProcessor.php  HttpStatusCodes.php  RemoteAddress.php  StdDateTime.php  StdHtmlElements.php  StdTypes.php  index.php
PHP/Stupar/core/include/database/: Database.logger_system.php  Database.php
PHP/Stupar/core/include/generic/: InputValidators.php  PrimitiveUtils.php
PHP/Stupar/core/libs/PHP/phroute/: README.md
PHP/Stupar/templates/default/assets/: style.css
Qt/HiveManager/: CMakeLists.txt
Qt/HiveManager/src/: main.cpp
Qt/HiveManager/src/app/: HivesConnectionsManager.cpp  HivesConnectionsManager.h
Qt/HiveManager/src/gui/: MainWindow.cpp  MainWindow.h
Qt/HiveManager/src/services/Http/: HttpStatusCodes.h  HttpWebRequest.cpp  HttpWebRequest.h
Qt/HiveManager/src/services/Tcp/: TcpServerM.cpp  TcpServerM.h
src/: main.cpp
src/app/: HivesConnectionsManager.cpp  HivesConnectionsManager.h
src/core/: Logger.cpp
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.qml  MainWindow.ui  qml.qrc
src/services/HttpWebRequests/: HttpWebRequest.h
src/services/TcpServerM/: TcpServerM.cpp  TcpServerM.h
